--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,21 @@ body{
     text-align: center;
 }
 
+.bg-img-out{
+    background-color: var(--dis-bg-img);
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+.img-out-centre{
+    text-align: center;
+    border: rgb(169, 195, 5) 1px dashed;
+    background-color: var(--di-bg-concen);
+    height: 400px;
+}
+
 /* #endregion main */
 
 
